--- a/static/css/mainpage.css
+++ b/static/css/mainpage.css
@@ -29,7 +29,7 @@ h2{
 }
 .action-buttons{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     padding: 0 0 0 0;
